--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -1,8 +1,27 @@
 <header class="main-header">
     <nav class="main-header__nav">
         <ul class="main-header__item-list">
-            <li class="main-header__item"><a class="<%= (locals.path != null) ? path === '/' ? 'active' : '' : ''%>" href="/">Shop</a></li>
-            <li class="main-header__item"><a class="<%= (locals.path != null) ? path === '/admin/add-product' ? 'active' : '' : '' %>" href="/admin/add-product">Add Product</a></li>
+
+            <li class="main-header__item">
+                <a class="<%= (locals.path != null) ? path === '/' ? 'active' : '' : ''%>" href="/">Shop</a>
+            </li>
+
+            <li class="main-header__item">
+                <a class="<%= (locals.path != null) ? path === '/products' ? 'active' : '' : ''%>" href="/products">Products</a>
+            </li>
+
+            <li class="main-header__item">
+                <a class="<%= (locals.path != null) ? path === '/cart' ? 'active' : '' : ''%>" href="/cart">Cart</a>
+            </li>
+
+            <li class="main-header__item">
+                <a class="<%= (locals.path != null) ? path === '/admin/add-product' ? 'active' : '' : '' %>" href="/admin/add-product">Add Product</a>
+            </li>
+
+            <li class="main-header__item">
+                <a class="<%= (locals.path != null) ? path === '/admin/products' ? 'active' : '' : '' %>" href="/admin/products">Admin Products</a>
+            </li>
+
         </ul>
     </nav>
 </header>
