--- a/public/css/main.css
+++ b/public/css/main.css
@@ -76,10 +76,12 @@ main {
 
 .card__image {
   width: 100%;
+  text-align: center;
 }
 
 .card__image img {
-  width: 100%;
+  /*width: 100%;*/
+  height: 200px;
 }
 
 .card__actions {
