--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -14,9 +14,8 @@
             <% } %>
         <% } %>
 
-
-
-        <form class="product-form" action="/admin/<% if (editing) { %>edit-product<% } else { %>add-product<% } %>" method="POST">
+        <form class="product-form" action="/admin/<% if (editing) { %>edit-product<% } else { %>add-product<% } %>"
+              method="POST" enctype="multipart/form-data">
             <div class="form-control">
                 <label for="title">Title</label>
                 <input
@@ -24,6 +23,14 @@
                         type="text" name="title" id="title"
                         value="<% if (editing || hasError) { %><%= product.title %><% } %>">
             </div>
+
+            <div class="form-control">
+                <label for="image">Image URL</label>
+                <input type="file" name="image" id="image">
+            </div>
+
+
+            <!--
             <div class="form-control">
                 <label for="imageUrl">Image URL</label>
                 <input
@@ -31,6 +38,8 @@
                         type="text" name="imageUrl" id="imageUrl"
                         value="<% if (editing || hasError) { %><%= product.imageUrl %><% } %>">
             </div>
+
+            -->
             <div class="form-control">
                 <label for="price">Price</label>
                 <input
